# nanogui-customization-demo

./: .appveyor.yml  .gitmodules  .travis.yml  CMakeLists.txt  CustomTheme.hpp  GLTexture.hpp  LICENSE  README.md  exampleCustomization.cpp
cpp/: custom_icon_theme_and_fonts.cpp  custom_screen.hpp  custom_theme.hpp  custom_theme_and_fonts.cpp  example_custom_icon_font.cpp  example_customization.cpp  example_fontawesome.cpp  gl_texture.hpp  make_compare_window.hpp
include/: my_theme.h
python/: custom_icon_theme_and_fonts.py  custom_screen.py  custom_theme.py  custom_theme_and_fonts.py  example_custom_icon_font.py  example_customization.py  example_fontawesome.py  make_compare_window.py  theme_builder.py
resources/fontawesome/: LICENSE  constants_fontawesome.cpp  fontawesome.h
src/: main.cpp  my_theme.cpp
